# smeta-generator

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: index.ts
apps/api/src/__tests__/: calculator.test.ts  documents.test.ts  ml.test.ts  projects.test.ts
apps/api/src/ai/: genkit.config.ts
apps/api/src/ai/flows/: blueprintAnalysis.flow.ts  generateEstimate.flow.ts  parseRequest.flow.ts  pricePrediction.flow.ts  voiceCommand.flow.ts
apps/api/src/ai/schemas/: assistant.schema.ts  estimate.schema.ts
apps/api/src/ai/services/: normativesMatcher.ts
apps/api/src/lib/: prisma.ts
apps/api/src/middleware/: auth.ts  errorHandler.ts  validation.ts
apps/api/src/ml/: config.ts  index.ts  types.ts
apps/api/src/ml/models/: anomalyDetector.ts  costOptimizer.ts  pricePredictor.ts  recommendationEngine.ts  workClassifier.ts
apps/api/src/ml/training/: dataPreparation.ts  evaluation.ts  modelTraining.ts
apps/api/src/ml/utils/: embeddings.ts  featureEngineering.ts  normalization.ts
apps/api/src/routes/: ai.ts  auth.ts  calculator.ts  clients.ts  export.ts  projects.ts
apps/api/src/services/: documents.ts
apps/telegram-bot/: package.json  tsconfig.json
apps/telegram-bot/src/: index.ts
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/public/: manifest.json  sw.js
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/__tests__/: Calculator.test.tsx
apps/web/src/components/: AIAssistantPanel.tsx  AIEstimateGenerator.tsx  Dashboard.tsx  EditableEstimateTable.tsx  EstimateTable.tsx  Layout.tsx  Navigation.tsx  Sidebar.tsx  ViewTransition.tsx
apps/web/src/components/ml/: AnomalyAlert.tsx  MLInsightsPanel.tsx  index.ts
apps/web/src/components/spark/: AIPromptSuggestions.tsx  CommandPalette.tsx  FeatureCard.tsx  OnboardingTooltip.tsx  QuickActionsBar.tsx  index.ts
apps/web/src/design-system/: index.ts
apps/web/src/design-system/components/: AnimatedNumber.tsx  Badge.tsx  FAB.tsx  GlassCard.tsx  ProgressRing.tsx  Skeleton.tsx  Toast.tsx  index.ts
apps/web/src/design-system/tokens/: animations.css  colors.css  spacing.css  typography.css
apps/web/src/pages/: CalculatorPage.tsx  ClientsPage.tsx  HomePage.tsx  LoginPage.tsx  ProjectDetailsPage.tsx  ProjectsPage.tsx  RegisterPage.tsx
apps/web/src/services/: api.ts  calculator.ts
apps/web/src/store/: useStore.ts
apps/web/src/types/: estimate.ts
data/normatives/: fer-2024.json
data/prices/: materials-2024.json
data/templates/: estimate-template.json
docker/: api.Dockerfile  web.Dockerfile
native/: Cargo.toml  README.md
native/c/: simd_calc.c  simd_calc.h
native/crates/denidom-api/: Cargo.toml
native/crates/denidom-api/src/: lib.rs  main.rs
native/crates/denidom-api/src/handlers/: mod.rs
native/crates/denidom-api/src/routes/: mod.rs
native/crates/denidom-cli/: Cargo.toml
native/crates/denidom-cli/src/: main.rs
native/crates/denidom-core/: Cargo.toml
native/crates/denidom-core/src/: calculator.rs  coefficients.rs  error.rs  estimate.rs  lib.rs  normatives.rs  units.rs
native/crates/denidom-db/: Cargo.toml
native/crates/denidom-db/src/: lib.rs  sqlite.rs
native/crates/denidom-parser/: Cargo.toml
native/crates/denidom-parser/src/: excel.rs  fer.rs  gesn.rs  lib.rs  xml.rs
native/crates/denidom-pdf/: Cargo.toml
native/crates/denidom-pdf/src/: ks2.rs  ks3.rs  lib.rs  m29.rs
native/crates/denidom-simd/: Cargo.toml
native/crates/denidom-simd/src/: lib.rs  scalar.rs  simd_calc.rs  types.rs
