[package]
name = "denidom-api"
version.workspace = true
edition.workspace = true
description = "REST API server for DeniDom"

[dependencies]
denidom-core = { path = "../denidom-core" }
denidom-simd = { path = "../denidom-simd" }
denidom-db = { path = "../denidom-db" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
