[package]
name = "denidom-cli"
version.workspace = true
edition.workspace = true
description = "DeniDom CLI - Command-line interface for estimate calculations"

[[bin]]
name = "denidom"
path = "src/main.rs"

[dependencies]
denidom-core = { path = "../denidom-core" }
denidom-simd = { path = "../denidom-simd" }

clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true
