[package]
name = "denidom-simd"
version.workspace = true
edition.workspace = true
description = "SIMD-optimized calculations for DeniDom"

[dependencies]
denidom-core = { path = "../denidom-core" }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion.workspace = true

[features]
default = []
avx2 = []
avx512 = []
neon = []
native-c = []
